...
                            NavigationLink(value: launch) {
                                LaunchCard(launchDetails: launch)
                                    .accessibilityIdentifier(launch.name)
                            }
                        }
                    }
                    .accessibilityIdentifier("TabViewLaunches")
                    .tabViewStyle(.page)
                    .aspectRatio(3 / 2, contentMode: .fit)
                    .listRowInsets(EdgeInsets())

                    // Section for upcoming events.
                    Text("Events")
...
                            NavigationLink(value: event) {
                                EventCard(eventDetails: event)
                                    .accessibilityIdentifier(event.name)
                            }
                        }
                    }
                    .accessibilityIdentifier("TabViewEvents")
                    .tabViewStyle(.page)
                    .aspectRatio(3 / 2, contentMode: .fit)
                    .listRowInsets(EdgeInsets())
                }
                .listStyle(.inset)
                .navigationTitle("Upcoming")
...
