...
    case networkErrorDetail(String)
    case decodingError
    
    var errorDescription: String? {
        switch self {
        case .invalidURL:
            return "Invalid URL"
        case .networkError:
            return "Network Error"
        case .networkErrorDetail:
            return "Network Error"
        case .decodingError:
            return "Decoding Error"
        }
    }
    var recoverySuggestion: String? {
        switch self {
        case .invalidURL:
            return "It seems that the URL is not valid. Please check the URL and try again."
...
